--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "feather-icons": "4",
     "nuxt": "^2.15.8",
     "randomstring": "^1.2.2",
+    "v-mask": "^2.3.0",
     "vue": "2",
     "vue-bootstrap4-table": "^1.1.11",
     "vue-feather": "1",
@@ -28,6 +29,7 @@
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vue-unicons": "^3.3.1",
+    "vue2-perfect-scrollbar": "^1.5.5",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
